--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,11 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-	
+	    <dependency>
+             <groupId>com.mysql</groupId>
+             <artifactId>mysql-connector-j</artifactId>
+             <version>8.3.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
